%% DER Conceptual del proyecto "Imperio"
%% Entidades puras con atributos (sin FK ni tablas intermedias)

erDiagram
    JUGADORES {
        INT id
        VARCHAR username
        VARCHAR email
        VARCHAR password
        DATE fecha_registro
    }

    GALAXIAS {
        INT id
        VARCHAR nombre
        VARCHAR sector
    }

    PLANETAS {
        INT id
        VARCHAR nombre
        INT coordenadaX
        INT coordenadaY
        INT superficie
    }

    RECURSOS {
        INT id
        VARCHAR nombre
        VARCHAR descripcion
    }

    NAVES {
        INT id
        VARCHAR nombre
        VARCHAR descripcion
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    EDIFICIOS {
        INT id
        VARCHAR nombre
        VARCHAR descripcion
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    ARMAMENTOS {
        INT id
        VARCHAR nombre
        VARCHAR descripcion
        INT costo_metal
        INT costo_cristal
        INT costo_energia
    }

    LUNAS {
        INT id
        VARCHAR nombre
        VARCHAR descripcion
        INT superficie
    }

    GALAXIAS ||--o{ PLANETAS : contiene
    JUGADORES ||--o{ PLANETAS : posee
    PLANETAS ||--o{ LUNAS : tiene
    PLANETAS }o--o{ RECURSOS : explota
    PLANETAS }o--o{ NAVES : despliega
    PLANETAS }o--o{ EDIFICIOS : construye
    PLANETAS }o--o{ ARMAMENTOS : equipa
